Make all notebooks respond to config input

--- a/viz_scripts/ebike_specific_metrics.ipynb
+++ b/viz_scripts/ebike_specific_metrics.ipynb
@@ -164,7 +164,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "quality_text = scaffolding.get_quality_text_ebike(expanded_ct, data_eb)"
+    "quality_text_mode = scaffolding.get_quality_text_ebike(expanded_ct, data_eb)"
    ]
   },
   {
@@ -187,7 +187,7 @@
     "if study_type == 'program':\n",
     "    labels_tp = data_eb['Trip_purpose'].value_counts(dropna=True).keys().tolist()\n",
     "    values_tp = data_eb['Trip_purpose'].value_counts(dropna=True).tolist()\n",
-    "    plot_title=f\"Number of trips for each purpose for {mode_of_interest} only\\n%s\" % quality_text\n",
+    "    plot_title=f\"Number of trips for each purpose for {mode_of_interest} only\\n%s\" % quality_text_mode\n",
     "    file_name= 'ntrips_ebike_purpose%s.png' % file_suffix\n",
     "    pie_chart_purpose(plot_title,labels_tp,values_tp,file_name)"
    ]
@@ -202,7 +202,7 @@
     "if study_type == 'program':\n",
     "    labels_eb = data_eb.Replaced_mode.value_counts(dropna=True).keys().tolist()\n",
     "    values_eb = data_eb.Replaced_mode.value_counts(dropna=True).tolist()\n",
-    "    plot_title=\"Number of trips for each replaced transport mode for eBike only\\n%s\" % quality_text\n",
+    "    plot_title=\"Number of trips for each replaced transport mode for eBike only\\n%s\" % quality_text_mode\n",
     "    file_name ='ntrips_ebike_replaced_mode%s.png' % file_suffix\n",
     "    pie_chart_mode(plot_title,labels_eb,values_eb,file_name)"
    ]
@@ -236,7 +236,7 @@
     "        labels_m.append(x)\n",
     "        values_m.append(y)\n",
     "\n",
-    "    plot_title=\"Distribution of Miles Replaced by Ebike \\n%s\" % quality_text\n",
+    "    plot_title=\"Distribution of Miles Replaced by Ebike \\n%s\" % quality_text_mode\n",
     "    file_name ='miles_ebike_replaced_mode%s.png' % file_suffix\n",
     "    pie_chart_mode(plot_title,labels_m,values_m,file_name)\n",
     "    print(dg)"
@@ -247,7 +247,7 @@
    "id": "honest-dylan",
    "metadata": {},
    "source": [
-    "### Average Miles per trip for specified mode"
+    "### Average miles per trip for specified mode"
    ]
   },
   {
@@ -263,7 +263,7 @@
     "    y='Average (miles)'\n",
     "    y2 = \"Count\"\n",
     "\n",
-    "    plot_title=\" Average Miles for each replaced mode with > 3 entries\\n'Other' represents trips with a non-standard or missing replacement\\n%s\" % quality_text\n",
+    "    plot_title=\" Average Miles for each replaced mode with > 3 entries\\n'Other' represents trips with a non-standard or missing replacement\\n%s\" % quality_text_mode\n",
     "    file_name ='average_miles_replaced_mode%s.png' % file_suffix\n",
     "\n",
     "    barplot_mode(data,x,y,plot_title,file_name)"
@@ -282,7 +282,7 @@
     "    y='Average (miles)'\n",
     "    y2 = \"Count\"\n",
     "\n",
-    "    plot_title=\" Average Miles for each replaced mode with > 3 entries\\n%s\" % quality_text\n",
+    "    plot_title=\" Average Miles for each replaced mode with > 3 entries\\n%s\" % quality_text_mode\n",
     "    file_name ='average_miles_replaced_mode2%s.png' % file_suffix\n",
     "\n",
     "    barplot_mode2(data,x,y,y2,plot_title,file_name)"
@@ -312,7 +312,7 @@
     "    x = 'Day of the Month'\n",
     "    y = 'Number of Trips'\n",
     "\n",
-    "    plot_title=\"Number of ebike trips by day\\n%s\" % quality_text\n",
+    "    plot_title=\"Number of ebike trips by day\\n%s\" % quality_text_mode\n",
     "    file_name ='ntrips_ebike_per_day%s.png' % file_suffix\n",
     "\n",
     "    barplot_day(data,x,y,plot_title,file_name)"
@@ -323,7 +323,7 @@
    "id": "pediatric-cowboy",
    "metadata": {},
    "source": [
-    "### Number of Trips by day of week¶"
+    "### Number of trips by day of week¶"
    ]
   },
   {
@@ -344,7 +344,7 @@
     "    x = 'Weekday'\n",
     "    y = 'Number of Trips'\n",
     "\n",
-    "    plot_title=\"Number of trips by weekday\\n%s\" % quality_text\n",
+    "    plot_title=\"Number of trips by weekday\\n%s\" % quality_text_mode\n",
     "    file_name ='ntrips_per_weekday%s.png' % file_suffix\n",
     "\n",
     "    barplot_day(data,x,y,plot_title,file_name)"
