--- a/viz_scripts/energy_calculations.ipynb
+++ b/viz_scripts/energy_calculations.ipynb
@@ -144,13 +144,13 @@
    "id": "caring-aruba",
    "metadata": {},
    "source": [
-    "## Energy Impacts (kWH)"
+    "## Energy Impacts Relative to Specific Mode"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "civil-metabolism",
+   "id": "blessed-leader",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -158,11 +158,21 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "seeing-court",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "quality_text_mode = scaffolding.get_quality_text_ebike(expanded_ct, data_eb)"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "id": "sized-drain",
    "metadata": {},
    "source": [
-    "## Distance vs. Energy_Impact (kWH) by Mode_confirm"
+    "### Distance vs. energy impact (kWH) by Mode_confirm"
    ]
   },
   {
@@ -188,14 +198,16 @@
    "id": "ready-return",
    "metadata": {},
    "source": [
-    "## Energy_Impact (kWH)"
+    "### Energy impact (kWH)"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
    "id": "adequate-oriental",
-   "metadata": {},
+   "metadata": {
+    "scrolled": false
+   },
    "outputs": [],
    "source": [
     "if study_type == 'program':\n",
@@ -209,36 +221,26 @@
     "    subset1 = eirc [['Replaced_mode', 'Sketch of Total Energy_Impact(kWH)']].copy()\n",
     "    subset1.rename(columns = {'Replaced_mode':'Transport Mode','Sketch of Total Energy_Impact(kWH)':'Replaced_Mode' }, inplace=True)\n",
     "\n",
-    "#eimc : energy impact mode_confirm\n",
-    "eimc=expanded_ct.groupby('Mode_confirm').agg({'Energy_Impact(kWH)': ['sum', 'mean']},)\n",
-    "eimc.columns = ['Sketch of Total Energy_Impact(kWH)', 'Sketch of Average Energy_Impact(kWH)']\n",
-    "eimc = eimc.reset_index()\n",
-    "eimc = eimc.sort_values(by=['Sketch of Total Energy_Impact(kWH)'], ascending=False)\n",
+    "    #eimc : energy impact mode_confirm\n",
+    "    eimc=expanded_ct.groupby('Mode_confirm').agg({'Energy_Impact(kWH)': ['sum', 'mean']},)\n",
+    "    eimc.columns = ['Sketch of Total Energy_Impact(kWH)', 'Sketch of Average Energy_Impact(kWH)']\n",
+    "    eimc = eimc.reset_index()\n",
+    "    eimc = eimc.sort_values(by=['Sketch of Total Energy_Impact(kWH)'], ascending=False)\n",
     "\n",
-    "subset2 = eimc [['Mode_confirm', 'Sketch of Total Energy_Impact(kWH)']].copy()\n",
-    "subset2.rename(columns = {'Mode_confirm':'Transport Mode','Sketch of Total Energy_Impact(kWH)':'Mode_Confirm' }, inplace=True)\n",
+    "    subset2 = eimc [['Mode_confirm', 'Sketch of Total Energy_Impact(kWH)']].copy()\n",
+    "    subset2.rename(columns = {'Mode_confirm':'Transport Mode','Sketch of Total Energy_Impact(kWH)':'Mode_Confirm' }, inplace=True)\n",
     "\n",
-    "df_plot = pd.merge(subset1, subset2, on=\"Transport Mode\")\n",
-    "df = pd.melt(df_plot , id_vars=['Transport Mode'], value_vars=['Replaced_Mode','Mode_Confirm'], var_name='selection')\n",
-    "df.rename(columns = {'value':'Energy Impact (kWH)'}, inplace = True)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "unknown-venice",
-   "metadata": {
-    "scrolled": false
-   },
-   "outputs": [],
-   "source": [
-    "df= df.sort_values(by=['Energy Impact (kWH)'], ascending=False)\n",
-    "x= 'Energy Impact (kWH)'\n",
-    "y= 'Transport Mode'\n",
-    "color = 'selection'\n",
-    "plot_title=\"Sketch of Energy Impact (kWH) by Transport Mode\\n%s\" % quality_text\n",
-    "file_name ='sketch_all_energy_impact%s.png' % file_suffix\n",
-    "overeall_energy_impact(x,y,color,df,plot_title,file_name)"
+    "    df_plot = pd.merge(subset1, subset2, on=\"Transport Mode\")\n",
+    "    df = pd.melt(df_plot , id_vars=['Transport Mode'], value_vars=['Replaced_Mode','Mode_Confirm'], var_name='selection')\n",
+    "    df.rename(columns = {'value':'Energy Impact (kWH)'}, inplace = True)\n",
+    "    \n",
+    "    df= df.sort_values(by=['Energy Impact (kWH)'], ascending=False)\n",
+    "    x= 'Energy Impact (kWH)'\n",
+    "    y= 'Transport Mode'\n",
+    "    color = 'selection'\n",
+    "    plot_title=\"Sketch of Energy Impact (kWH) by Transport Mode\\n%s\" % quality_text\n",
+    "    file_name ='sketch_all_energy_impact%s.png' % file_suffix\n",
+    "    overeall_energy_impact(x,y,color,df,plot_title,file_name)"
    ]
   },
   {
@@ -246,7 +248,7 @@
    "id": "loose-puppy",
    "metadata": {},
    "source": [
-    "## Sketch of Total Energy_Impact (kWH) by Replaced_mode"
+    "### Sketch of total energy_impact (kWH) by Replaced_mode"
    ]
   },
   {
@@ -273,7 +275,7 @@
    "id": "advanced-complexity",
    "metadata": {},
    "source": [
-    "## Sketch of Energy Impact by E-bike trips"
+    "### Sketch of energy impact by trips for specified mode"
    ]
   },
   {
@@ -285,40 +287,22 @@
    },
    "outputs": [],
    "source": [
-    "data_eb = expanded_ct.query(\"Mode_confirm == 'Pilot ebike'\")\n",
-    "# ebei : ebike energy impact\n",
-    "ebei=data_eb.groupby('Replaced_mode').agg({'Energy_Impact(kWH)': ['sum', 'mean']},)\n",
-    "ebei.columns = ['Sketch of Total Energy_Impact(kWH)', 'Sketch of Average Energy_Impact(kWH)']\n",
-    "ebei= ebei.reset_index()\n",
-    "ebei = ebei.sort_values(by=['Sketch of Total Energy_Impact(kWH)'], ascending=False)\n",
-    "ebei['boolean'] = ebei['Sketch of Total Energy_Impact(kWH)'] > 0\n",
-    "net_energy_saved = round(sum(ebei['Sketch of Total Energy_Impact(kWH)']), 2)\n",
+    "if study_type == 'program':\n",
+    "    # ebei : ebike energy impact\n",
+    "    ebei=data_eb.groupby('Replaced_mode').agg({'Energy_Impact(kWH)': ['sum', 'mean']},)\n",
+    "    ebei.columns = ['Sketch of Total Energy_Impact(kWH)', 'Sketch of Average Energy_Impact(kWH)']\n",
+    "    ebei= ebei.reset_index()\n",
+    "    ebei = ebei.sort_values(by=['Sketch of Total Energy_Impact(kWH)'], ascending=False)\n",
+    "    ebei['boolean'] = ebei['Sketch of Total Energy_Impact(kWH)'] > 0\n",
+    "    net_energy_saved = round(sum(ebei['Sketch of Total Energy_Impact(kWH)']), 2)\n",
     "\n",
-    "x = ebei['Sketch of Total Energy_Impact(kWH)']\n",
-    "y = ebei['Replaced_mode']\n",
-    "color =ebei['boolean']\n",
+    "    x = ebei['Sketch of Total Energy_Impact(kWH)']\n",
+    "    y = ebei['Replaced_mode']\n",
+    "    color =ebei['boolean']\n",
     "\n",
-    "plot_title=\"Sketch of Energy Impact of E-Bike trips\\n Contribution by replaced mode towards a total of %s (kWH)\\n %s\" % (net_energy_saved, quality_text)\n",
-    "file_name ='sketch_energy_impact_ebike%s.png' % file_suffix\n",
-    "energy_impact(x,y,color,plot_title,file_name)"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "exact-utility",
-   "metadata": {},
-   "source": [
-    "## CO2 Emissions (lb) Calculation"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "fallen-yugoslavia",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "expanded_ct = scaffolding.CO2_impact_lb(expanded_ct,'distance_miles','Replaced_mode', 'Mode_confirm')"
+    "    plot_title=\"Sketch of Energy Impact of E-Bike trips\\n Contribution by replaced mode towards a total of %s (kWH)\\n %s\" % (net_energy_saved, quality_text_mode)\n",
+    "    file_name ='sketch_energy_impact_ebike%s.png' % file_suffix\n",
+    "    energy_impact(x,y,color,plot_title,file_name)"
    ]
   },
   {
@@ -326,7 +310,7 @@
    "id": "crazy-retreat",
    "metadata": {},
    "source": [
-    "## Sketch of Total CO2 Emissions by Replaced_mode"
+    "### Sketch of total CO2 emissions by Replaced_mode"
    ]
   },
   {
@@ -336,22 +320,23 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "co2rp=expanded_ct.groupby('Replaced_mode').agg({'CO2_Impact(lb)': ['sum', 'mean']},)\n",
-    "co2rp.columns = ['total_lb_CO2_emissions', 'average_lb_CO2_emission']\n",
-    "co2rp = co2rp.reset_index()\n",
-    "co2rp= co2rp.sort_values(by=['total_lb_CO2_emissions'], ascending=False)\n",
-    "co2rp['boolean'] = co2rp['total_lb_CO2_emissions'] > 0\n",
+    "if study_type == 'program':\n",
+    "    co2rp=expanded_ct.groupby('Replaced_mode').agg({'CO2_Impact(lb)': ['sum', 'mean']},)\n",
+    "    co2rp.columns = ['total_lb_CO2_emissions', 'average_lb_CO2_emission']\n",
+    "    co2rp = co2rp.reset_index()\n",
+    "    co2rp= co2rp.sort_values(by=['total_lb_CO2_emissions'], ascending=False)\n",
+    "    co2rp['boolean'] = co2rp['total_lb_CO2_emissions'] > 0\n",
     "\n",
     "\n",
-    "net_CO2_saved = round(sum(co2rp['total_lb_CO2_emissions']), 2)\n",
+    "    net_CO2_saved = round(sum(co2rp['total_lb_CO2_emissions']), 2)\n",
     "\n",
-    "x = co2rp['total_lb_CO2_emissions']\n",
-    "y = co2rp['Replaced_mode']\n",
-    "color =co2rp['boolean']\n",
+    "    x = co2rp['total_lb_CO2_emissions']\n",
+    "    y = co2rp['Replaced_mode']\n",
+    "    color =co2rp['boolean']\n",
     "\n",
-    "plot_title=\"Sketch of CO2 Emissions Impact for all confirmed trips \\n Contribution by mode towards a total of %s (kWH) \\n%s\" % (net_CO2_saved, quality_text)\n",
-    "file_name ='sketch_all_mode_CO2impact%s.png' % file_suffix\n",
-    "CO2_impact(x,y,color,plot_title,file_name)"
+    "    plot_title=\"Sketch of CO2 Emissions Impact for all confirmed trips \\n Contribution by mode towards a total of %s (kWH) \\n%s\" % (net_CO2_saved, quality_text)\n",
+    "    file_name ='sketch_all_mode_CO2impact%s.png' % file_suffix\n",
+    "    CO2_impact(x,y,color,plot_title,file_name)"
    ]
   },
   {
@@ -359,7 +344,7 @@
    "id": "strategic-sheet",
    "metadata": {},
    "source": [
-    "## Sketch of  CO2 Emissions Impact by E-bike trips"
+    "## Sketch of CO2 emissions impact by trips of specified mode"
    ]
   },
   {
@@ -369,22 +354,21 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "data_eb = expanded_ct.query(\"Mode_confirm == 'Pilot ebike'\")\n",
+    "if study_type == 'program':\n",
+    "    ebco2=data_eb.groupby('Replaced_mode').agg({'CO2_Impact(lb)': ['sum', 'mean']},)\n",
+    "    ebco2.columns = ['total_lb_CO2_emissions', 'average_lb_CO2_emission']\n",
+    "    ebco2 = ebco2.reset_index()\n",
+    "    ebco2 = ebco2.sort_values(by=['total_lb_CO2_emissions'], ascending=False)\n",
+    "    ebco2['boolean'] = ebco2['total_lb_CO2_emissions'] > 0\n",
+    "    net_CO2_emissions = round(sum(ebco2['total_lb_CO2_emissions']), 2)\n",
     "\n",
-    "ebco2=data_eb.groupby('Replaced_mode').agg({'CO2_Impact(lb)': ['sum', 'mean']},)\n",
-    "ebco2.columns = ['total_lb_CO2_emissions', 'average_lb_CO2_emission']\n",
-    "ebco2 = ebco2.reset_index()\n",
-    "ebco2 = ebco2.sort_values(by=['total_lb_CO2_emissions'], ascending=False)\n",
-    "ebco2['boolean'] = ebco2['total_lb_CO2_emissions'] > 0\n",
-    "net_CO2_emissions = round(sum(ebco2['total_lb_CO2_emissions']), 2)\n",
+    "    x = ebco2['total_lb_CO2_emissions']\n",
+    "    y = ebco2['Replaced_mode']\n",
+    "    color = ebco2['boolean']\n",
     "\n",
-    "x = ebco2['total_lb_CO2_emissions']\n",
-    "y = ebco2['Replaced_mode']\n",
-    "color = ebco2['boolean']\n",
-    "\n",
-    "plot_title=\"Sketch of Total Pounds of CO2 Emissions of E-Bike trips\\n Contribution by replaced mode towards a total of %s (lb CO2 Emissions )\\n %s\" % (net_CO2_emissions, quality_text)\n",
-    "file_name ='sketch_CO2impact_ebike%s.png' % file_suffix\n",
-    "CO2_impact(x,y,color,plot_title,file_name)"
+    "    plot_title=\"Sketch of Total Pounds of CO2 Emissions of E-Bike trips\\n Contribution by replaced mode towards a total of %s (lb CO2 Emissions )\\n %s\" % (net_CO2_emissions, quality_text_mode)\n",
+    "    file_name ='sketch_CO2impact_ebike%s.png' % file_suffix\n",
+    "    CO2_impact(x,y,color,plot_title,file_name)"
    ]
   }
  ],
