--- a/viz_scripts/generic_metrics_ebike_project.ipynb
+++ b/viz_scripts/generic_metrics_ebike_project.ipynb
@@ -141,17 +141,47 @@
   },
   {
    "cell_type": "markdown",
+   "id": "modified-skiing",
+   "metadata": {},
+   "source": [
+    "## Generic Metrics"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "blessed-leader",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "data_eb = expanded_ct.query(f\"Mode_confirm == '{mode_of_interest}'\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "seeing-court",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "quality_text_mode = scaffolding.get_quality_text_ebike(expanded_ct, data_eb)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "id": "distributed-peace",
    "metadata": {},
    "source": [
-    "## Distribution of Mode_confirm Attribute"
+    "### Distribution of Mode_confirm attribute"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
    "id": "tracked-serbia",
-   "metadata": {},
+   "metadata": {
+    "scrolled": true
+   },
    "outputs": [],
    "source": [
     "labels_mc = expanded_ct['Mode_confirm'].value_counts(dropna=True).keys().tolist()\n",
@@ -166,7 +196,9 @@
    "cell_type": "code",
    "execution_count": null,
    "id": "about-seafood",
-   "metadata": {},
+   "metadata": {
+    "scrolled": true
+   },
    "outputs": [],
    "source": [
     "labels_mc = expanded_ct.query(\"Trip_purpose == 'Work'\").Mode_confirm.value_counts(dropna=True).keys().tolist()\n",
@@ -182,40 +214,26 @@
    "id": "biological-vancouver",
    "metadata": {},
    "source": [
-    "## Distribution of Replace_Mode Attribute"
+    "### Distribution of Replaced_mode attribute"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
    "id": "comprehensive-august",
-   "metadata": {},
+   "metadata": {
+    "scrolled": true
+   },
    "outputs": [],
    "source": [
-    "labels_rm = expanded_ct['Replaced_mode'].value_counts(dropna=True).keys().tolist()\n",
-    "values_rm = expanded_ct['Replaced_mode'].value_counts(dropna=True).tolist()\n",
-    "plot_title=\"Number of trips for each replaced mode (selected by users)\\n%s\" % quality_text\n",
-    "file_name= 'ntrips_replaced_mode%s.png' % file_suffix\n",
-    "pie_chart_mode(plot_title,labels_rm,values_rm,file_name)"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "prepared-saver",
-   "metadata": {},
-   "source": [
-    "### Note: The portion of pilot ebikes in the pie chart above is only when the mode_confirm is different that ebike. Example: mode_confirm was Walk, replaced_mode ebike. \n",
-    "###           mode_confrim was Car, drove alone, replaced_mode ebike."
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "acceptable-producer",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "expanded_ct.loc[expanded_ct['Replaced_mode'] == 'Pilot ebike'].Mode_confirm.unique()"
+    "# Note: The portion of pilot ebikes in the pie chart below is only when the mode_confirm is different that ebike. Example: mode_confirm was Walk, replaced_mode ebike.\n",
+    "# mode_confrim was Car, drove alone, replaced_mode ebike.\n",
+    "if study_type == 'program':\n",
+    "    labels_rm = expanded_ct['Replaced_mode'].value_counts(dropna=True).keys().tolist()\n",
+    "    values_rm = expanded_ct['Replaced_mode'].value_counts(dropna=True).tolist()\n",
+    "    plot_title=\"Number of trips for each replaced mode (selected by users)\\n%s\" % quality_text\n",
+    "    file_name= 'ntrips_replaced_mode%s.png' % file_suffix\n",
+    "    pie_chart_mode(plot_title,labels_rm,values_rm,file_name)"
    ]
   },
   {
@@ -223,7 +241,7 @@
    "id": "careful-spencer",
    "metadata": {},
    "source": [
-    "## Distribution of Trip Purpose Attribute"
+    "### Distribution of Trip_purpose attribute"
    ]
   },
   {
@@ -246,14 +264,16 @@
    "id": "crucial-keyboard",
    "metadata": {},
    "source": [
-    "## Transport of Choice for Trips Under 10 Miles"
+    "### Mode choice for trips under 10 miles"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
    "id": "identified-replica",
-   "metadata": {},
+   "metadata": {
+    "scrolled": true
+   },
    "outputs": [],
    "source": [
     "labels_d10 = expanded_ct.loc[(expanded_ct['distance_miles'] <= 10)].Mode_confirm.value_counts(dropna=True).keys().tolist()\n",
@@ -269,14 +289,16 @@
    "id": "dominant-company",
    "metadata": {},
    "source": [
-    "## Miles per transport mode selected (Mode_confirm)"
+    "### Miles per chosen transport mode"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
    "id": "satisfied-sharing",
-   "metadata": {},
+   "metadata": {
+    "scrolled": true
+   },
    "outputs": [],
    "source": [
     "miles = expanded_ct.groupby('Mode_confirm').agg({'distance_miles': ['sum', 'count' , 'mean']})\n",
@@ -305,7 +327,7 @@
    "id": "demanding-franklin",
    "metadata": {},
    "source": [
-    "## Average Miles per transport mode selected (Mode_confirm)"
+    "### Average miles per transport mode selected (Mode_confirm)"
    ]
   },
   {
@@ -348,7 +370,7 @@
    "id": "sound-bradley",
    "metadata": {},
    "source": [
-    "## Number of Trips by Day¶"
+    "### Number of trips by day¶"
    ]
   },
   {
@@ -361,16 +383,7 @@
     "fq_days = expanded_ct.groupby(['start_local_dt_day']).agg({'start_local_dt_day': ['sum', 'count']})\n",
     "fq_days = fq_days.reset_index()\n",
     "fq_days.columns = ['Day of the Month', 'Total', 'Number of Trips']\n",
-    "fq_days"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "working-michigan",
-   "metadata": {},
-   "outputs": [],
-   "source": [
+    "\n",
     "data = fq_days\n",
     "x = 'Day of the Month'\n",
     "y = 'Number of Trips'\n",
@@ -386,7 +399,7 @@
    "id": "challenging-julian",
    "metadata": {},
    "source": [
-    "## Number of Trips by day of week¶"
+    "### Number of trips by day of week¶"
    ]
   },
   {
@@ -401,16 +414,7 @@
     "fq_weekdays.columns = ['Weekday', 'Total', 'Number of Trips']\n",
     "weekday_labels = [\"Mon\", \"Tue\", \"Wed\", \"Thu\", \"Fri\", \"Sat\", \"Sun\"]\n",
     "fq_weekdays[\"Weekday\"] = fq_weekdays.Weekday.apply(lambda x: weekday_labels[x])\n",
-    "fq_weekdays"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "fallen-gender",
-   "metadata": {},
-   "outputs": [],
-   "source": [
+    "\n",
     "data = fq_weekdays\n",
     "x = 'Weekday'\n",
     "y = 'Number of Trips'\n",
