Temp line to keep things running without changing configs

--- a/viz_scripts/mode_purpose_share.ipynb
+++ b/viz_scripts/mode_purpose_share.ipynb
@@ -194,7 +194,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "ax.figure.savefig(\"/plots/mode_confirm_%s.png\" % file_suffix)"
+    "ax.figure.savefig(\"/plots/mode_confirm%s.png\" % file_suffix)"
    ]
   },
   {
@@ -227,7 +227,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "ax.figure.savefig(\"/plots/mode_confirm_misc_expand_%s.png\" % file_suffix)"
+    "ax.figure.savefig(\"/plots/mode_confirm_misc_expand%s.png\" % file_suffix)"
    ]
   }
  ],
