Simple alt text for pie charts only

--- a/viz_scripts/mode_purpose_share.ipynb
+++ b/viz_scripts/mode_purpose_share.ipynb
@@ -194,7 +194,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "ax.figure.savefig(\"/plots/mode_confirm%s.png\" % file_suffix)"
+    "ax.figure.savefig(\"/plots/mode_confirm%s.png\" % file_suffix)\n",
+    "alt_text = scaffolding.store_alt_text_pie(top_ten_mode_confirm, 'mode_confirm', 'travel modes', './alt_text_lookup.json')"
    ]
   },
   {
@@ -227,7 +228,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "ax.figure.savefig(\"/plots/mode_confirm_misc_expand%s.png\" % file_suffix)"
+    "ax.figure.savefig(\"/plots/mode_confirm_misc_expand%s.png\" % file_suffix)\n",
+    "alt_text = scaffolding.store_alt_text_pie(below_top_ten_mode_confirm, 'mode_confirm_misc_expand', 'travel modes', './alt_text_lookup.json')"
    ]
   }
  ],
