Add alt text to all plots

--- a/viz_scripts/ebike_specific_metrics.ipynb
+++ b/viz_scripts/ebike_specific_metrics.ipynb
@@ -180,16 +180,17 @@
    "execution_count": null,
    "id": "respiratory-breach",
    "metadata": {
-    "scrolled": true
+    "scrolled": false
    },
    "outputs": [],
    "source": [
     "if study_type == 'program':\n",
     "    labels_tp = data_eb['Trip_purpose'].value_counts(dropna=True).keys().tolist()\n",
     "    values_tp = data_eb['Trip_purpose'].value_counts(dropna=True).tolist()\n",
-    "    plot_title=f\"Number of trips for each purpose for {mode_of_interest} only\\n%s\" % quality_text_mode\n",
+    "    plot_title=f\"Number of trips for each purpose for {mode_of_interest} only\\n{quality_text_mode}\"\n",
     "    file_name= 'ntrips_ebike_purpose%s.png' % file_suffix\n",
-    "    pie_chart_purpose(plot_title,labels_tp,values_tp,file_name)"
+    "    pie_chart_purpose(plot_title,labels_tp,values_tp,file_name)\n",
+    "    scaffolding.store_alt_text_pie(pd.DataFrame(values_tp, labels_tp), file_name, plot_title, './alt_text_lookup.json')"
    ]
   },
   {
@@ -202,9 +203,10 @@
     "if study_type == 'program':\n",
     "    labels_eb = data_eb.Replaced_mode.value_counts(dropna=True).keys().tolist()\n",
     "    values_eb = data_eb.Replaced_mode.value_counts(dropna=True).tolist()\n",
-    "    plot_title=\"Number of trips for each replaced transport mode for eBike only\\n%s\" % quality_text_mode\n",
+    "    plot_title=f\"Number of trips for each replaced transport mode for {mode_of_interest} only\\n{quality_text_mode}\"\n",
     "    file_name ='ntrips_ebike_replaced_mode%s.png' % file_suffix\n",
-    "    pie_chart_mode(plot_title,labels_eb,values_eb,file_name)"
+    "    pie_chart_mode(plot_title,labels_eb,values_eb,file_name)\n",
+    "    scaffolding.store_alt_text_pie(pd.DataFrame(values_eb, labels_eb), file_name, plot_title, './alt_text_lookup.json')"
    ]
   },
   {
@@ -236,9 +238,10 @@
     "        labels_m.append(x)\n",
     "        values_m.append(y)\n",
     "\n",
-    "    plot_title=\"Distribution of Miles Replaced by Ebike \\n%s\" % quality_text_mode\n",
+    "    plot_title=f\"Distribution of Miles Replaced by {mode_of_interest} \\n{quality_text_mode}\"\n",
     "    file_name ='miles_ebike_replaced_mode%s.png' % file_suffix\n",
     "    pie_chart_mode(plot_title,labels_m,values_m,file_name)\n",
+    "    scaffolding.store_alt_text_pie(pd.DataFrame(values_m, labels_m), file_name, plot_title, './alt_text_lookup.json')\n",
     "    print(dg)"
    ]
   },
@@ -265,8 +268,8 @@
     "\n",
     "    plot_title=\" Average Miles for each replaced mode with > 3 entries\\n'Other' represents trips with a non-standard or missing replacement\\n%s\" % quality_text_mode\n",
     "    file_name ='average_miles_replaced_mode%s.png' % file_suffix\n",
-    "\n",
-    "    barplot_mode(data,x,y,plot_title,file_name)"
+    "    barplot_mode(data,x,y,plot_title,file_name)\n",
+    "    scaffolding.store_alt_text_bar(pd.DataFrame(data['Average (miles)'].values, data.Replaced_mode), file_name, plot_title, './alt_text_lookup.json')"
    ]
   },
   {
@@ -285,7 +288,8 @@
     "    plot_title=\" Average Miles for each replaced mode with > 3 entries\\n%s\" % quality_text_mode\n",
     "    file_name ='average_miles_replaced_mode2%s.png' % file_suffix\n",
     "\n",
-    "    barplot_mode2(data,x,y,y2,plot_title,file_name)"
+    "    barplot_mode2(data,x,y,y2,plot_title,file_name)\n",
+    "    scaffolding.store_alt_text_bar(pd.DataFrame(data['Average (miles)'].values, data.Replaced_mode), file_name, plot_title, './alt_text_lookup.json')"
    ]
   },
   {
@@ -312,10 +316,11 @@
     "    x = 'Day of the Month'\n",
     "    y = 'Number of Trips'\n",
     "\n",
-    "    plot_title=\"Number of ebike trips by day\\n%s\" % quality_text_mode\n",
+    "    plot_title=f\"Number of {mode_of_interest} trips by day\\n%s\" % quality_text_mode\n",
     "    file_name ='ntrips_ebike_per_day%s.png' % file_suffix\n",
     "\n",
-    "    barplot_day(data,x,y,plot_title,file_name)"
+    "    barplot_day(data,x,y,plot_title,file_name)\n",
+    "    scaffolding.store_alt_text_bar(pd.DataFrame(data['Number of Trips'].values, data['Day of the Month'].values), file_name, plot_title, './alt_text_lookup.json')"
    ]
   },
   {
@@ -347,7 +352,8 @@
     "    plot_title=\"Number of trips by weekday\\n%s\" % quality_text_mode\n",
     "    file_name ='ntrips_per_weekday%s.png' % file_suffix\n",
     "\n",
-    "    barplot_day(data,x,y,plot_title,file_name)"
+    "    barplot_day(data,x,y,plot_title,file_name)\n",
+    "    scaffolding.store_alt_text_bar(pd.DataFrame(data['Number of Trips'].values, data['Weekday'].values), file_name, plot_title, './alt_text_lookup.json')"
    ]
   }
  ],
