--- a/viz_scripts/generic_metrics_ebike_project.ipynb
+++ b/viz_scripts/generic_metrics_ebike_project.ipynb
@@ -189,6 +189,7 @@
     "plot_title= \"Number of trips for each mode (selected by users)\\n%s\" % quality_text\n",
     "file_name= 'ntrips_mode_confirm%s.png' % file_suffix\n",
     "pie_chart_mode(plot_title,labels_mc,values_mc,file_name)\n",
+    "alt_text = scaffolding.store_alt_text_pie(pd.DataFrame(values_mc, labels_mc), file_name, plot_title, './alt_text_lookup.json')\n",
     "print(expanded_ct['Mode_confirm'].value_counts(dropna=True))"
    ]
   },
@@ -206,6 +207,7 @@
     "plot_title= \"Number of commute trips for each mode (selected by users)\\n%s\" % quality_text\n",
     "file_name= 'ntrips_commute_mode_confirm%s.png' % file_suffix\n",
     "pie_chart_mode(plot_title,labels_mc,values_mc,file_name)\n",
+    "alt_text = scaffolding.store_alt_text_pie(pd.DataFrame(values_mc, labels_mc), file_name, plot_title, './alt_text_lookup.json')\n",
     "print(expanded_ct.query(\"Trip_purpose == 'Work'\").Mode_confirm.value_counts(dropna=True))"
    ]
   },
@@ -233,7 +235,8 @@
     "    values_rm = expanded_ct['Replaced_mode'].value_counts(dropna=True).tolist()\n",
     "    plot_title=\"Number of trips for each replaced mode (selected by users)\\n%s\" % quality_text\n",
     "    file_name= 'ntrips_replaced_mode%s.png' % file_suffix\n",
-    "    pie_chart_mode(plot_title,labels_rm,values_rm,file_name)"
+    "    pie_chart_mode(plot_title,labels_rm,values_rm,file_name)\n",
+    "    alt_text = scaffolding.store_alt_text_pie(pd.DataFrame(values_rm, labels_rm), file_name, plot_title, './alt_text_lookup.json')"
    ]
   },
   {
@@ -256,6 +259,7 @@
     "plot_title=\"Number of trips for each purposes (selected by users)\\n%s\" % quality_text\n",
     "file_name= 'ntrips_purpose%s.png' % file_suffix\n",
     "pie_chart_purpose(plot_title,labels_tp,values_tp,file_name)\n",
+    "alt_text = scaffolding.store_alt_text_pie(pd.DataFrame(values_tp, labels_tp), file_name, plot_title, './alt_text_lookup.json')\n",
     "print(expanded_ct['Trip_purpose'].value_counts(dropna=True))"
    ]
   },
@@ -281,6 +285,7 @@
     "plot_title=\"Mode confirmations for trips under 10 Miles\\n%s\" % quality_text\n",
     "file_name ='ntrips_under10miles_mode_confirm%s.png' % file_suffix\n",
     "pie_chart_mode(plot_title,labels_d10,values_d10,file_name)\n",
+    "alt_text = scaffolding.store_alt_text_pie(pd.DataFrame(values_d10, labels_d10), file_name, plot_title, './alt_text_lookup.json')\n",
     "print(expanded_ct.loc[(expanded_ct['distance_miles'] <= 10)].Mode_confirm.value_counts(dropna=True))"
    ]
   },
@@ -319,6 +324,7 @@
     "plot_title=\"Miles for each mode (selected by users)\\n%s\" % quality_text\n",
     "file_name ='miles_mode_confirm%s.png' % file_suffix\n",
     "pie_chart_mode(plot_title,labels_m,values_m,file_name)\n",
+    "alt_text = scaffolding.store_alt_text_pie(pd.DataFrame(values_m, labels_m), file_name, plot_title, './alt_text_lookup.json')\n",
     "print(miles)"
    ]
   },
@@ -344,7 +350,8 @@
     "plot_title=\" Average Miles for each mode with > 3 entries\\n%s\" % quality_text\n",
     "file_name ='average_miles_mode_confirm%s.png' % file_suffix\n",
     "\n",
-    "barplot_mode(data,x,y,plot_title,file_name)"
+    "barplot_mode(data,x,y,plot_title,file_name)\n",
+    "alt_text = scaffolding.store_alt_text_bar(pd.DataFrame(data['Average (miles)'].values, data['Mode_confirm']), file_name, plot_title, './alt_text_lookup.json')"
    ]
   },
   {
@@ -362,7 +369,8 @@
     "plot_title=\" Average Miles for each mode (selected by users)\\n%s\" % quality_text\n",
     "file_name ='average_miles_mode_confirm2%s.png' % file_suffix\n",
     "\n",
-    "barplot_mode2(data,x,y,y2,plot_title,file_name)"
+    "barplot_mode2(data,x,y,y2,plot_title,file_name)\n",
+    "alt_text = scaffolding.store_alt_text_bar(pd.DataFrame(data['Average (miles)'].values, data['Mode_confirm']), file_name, plot_title, './alt_text_lookup.json')"
    ]
   },
   {
@@ -391,7 +399,8 @@
     "plot_title=\"Number of trips by day\\n%s\" % quality_text\n",
     "file_name ='ntrips_per_day%s.png' % file_suffix\n",
     "\n",
-    "barplot_day(data,x,y,plot_title,file_name)"
+    "barplot_day(data,x,y,plot_title,file_name)\n",
+    "alt_text = scaffolding.store_alt_text_bar(pd.DataFrame(data['Number of Trips'].values, data['Day of the Month']), file_name, plot_title, './alt_text_lookup.json')"
    ]
   },
   {
@@ -422,7 +431,8 @@
     "plot_title=\"Number of trips by weekday\\n%s\" % quality_text\n",
     "file_name ='ntrips_per_weekday%s.png' % file_suffix\n",
     "\n",
-    "barplot_day(data,x,y,plot_title,file_name)"
+    "barplot_day(data,x,y,plot_title,file_name)\n",
+    "alt_text = scaffolding.store_alt_text_bar(pd.DataFrame(data['Number of Trips'].values, data['Weekday']), file_name, plot_title, './alt_text_lookup.json')"
    ]
   }
  ],
