--- a/viz_scripts/energy_calculations.ipynb
+++ b/viz_scripts/energy_calculations.ipynb
@@ -190,7 +190,8 @@
     "legend ='Mode_confirm'\n",
     "plot_title=\"Sketch of Energy Impact (kWH) by Travel Mode Selected\\n%s\" % quality_text\n",
     "file_name ='sketch_distance_energy_impact%s.png' % file_suffix\n",
-    "distancevsenergy(data,x,y,legend,plot_title,file_name)"
+    "distancevsenergy(data,x,y,legend,plot_title,file_name)\n",
+    "scaffolding.store_alt_text_generic('scatter plot', plot_title, file_name, './alt_text_lookup.json')"
    ]
   },
   {
@@ -240,7 +241,8 @@
     "    color = 'selection'\n",
     "    plot_title=\"Sketch of Energy Impact (kWH) by Transport Mode\\n%s\" % quality_text\n",
     "    file_name ='sketch_all_energy_impact%s.png' % file_suffix\n",
-    "    overeall_energy_impact(x,y,color,df,plot_title,file_name)"
+    "    overeall_energy_impact(x,y,color,df,plot_title,file_name)\n",
+    "    scaffolding.store_alt_text_bar(pd.DataFrame(df['Energy Impact (kWH)'].values, df['selection'] + '; ' + df['Transport Mode']), file_name, plot_title, './alt_text_lookup.json')"
    ]
   },
   {
@@ -267,7 +269,8 @@
     "\n",
     "    plot_title=\"Sketch of Energy Impact for all confirmed trips \\n Contribution by mode towards a total of %s (kWH) \\n%s\" % (net_energy_saved, quality_text)\n",
     "    file_name ='sketch_all_mode_energy_impact%s.png' % file_suffix\n",
-    "    energy_impact(x,y,color,plot_title,file_name)"
+    "    energy_impact(x,y,color,plot_title,file_name)\n",
+    "    scaffolding.store_alt_text_bar(pd.DataFrame(x,y), file_name, plot_title, './alt_text_lookup.json')"
    ]
   },
   {
@@ -302,7 +305,8 @@
     "\n",
     "    plot_title=\"Sketch of Energy Impact of E-Bike trips\\n Contribution by replaced mode towards a total of %s (kWH)\\n %s\" % (net_energy_saved, quality_text_mode)\n",
     "    file_name ='sketch_energy_impact_ebike%s.png' % file_suffix\n",
-    "    energy_impact(x,y,color,plot_title,file_name)"
+    "    energy_impact(x,y,color,plot_title,file_name)\n",
+    "    scaffolding.store_alt_text_bar(pd.DataFrame(x.values,y), file_name, plot_title, './alt_text_lookup.json')"
    ]
   },
   {
@@ -336,7 +340,8 @@
     "\n",
     "    plot_title=\"Sketch of CO2 Emissions Impact for all confirmed trips \\n Contribution by mode towards a total of %s (kWH) \\n%s\" % (net_CO2_saved, quality_text)\n",
     "    file_name ='sketch_all_mode_CO2impact%s.png' % file_suffix\n",
-    "    CO2_impact(x,y,color,plot_title,file_name)"
+    "    CO2_impact(x,y,color,plot_title,file_name)\n",
+    "    scaffolding.store_alt_text_bar(pd.DataFrame(x.values,y), file_name, plot_title, './alt_text_lookup.json')"
    ]
   },
   {
@@ -368,7 +373,8 @@
     "\n",
     "    plot_title=\"Sketch of Total Pounds of CO2 Emissions of E-Bike trips\\n Contribution by replaced mode towards a total of %s (lb CO2 Emissions )\\n %s\" % (net_CO2_emissions, quality_text_mode)\n",
     "    file_name ='sketch_CO2impact_ebike%s.png' % file_suffix\n",
-    "    CO2_impact(x,y,color,plot_title,file_name)"
+    "    CO2_impact(x,y,color,plot_title,file_name)\n",
+    "    scaffolding.store_alt_text_bar(pd.DataFrame(x.values,y), file_name, plot_title, './alt_text_lookup.json')"
    ]
   }
  ],
